--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "common-tags": "^1.8.2",
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spinners": "^0.13.4"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.1",
