--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-spinners": "^0.13.4"
   },
   "devDependencies": {
