--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.17.9",
     "@react-hook/debounce": "^4.0.0",
     "@react-hook/resize-observer": "^1.2.6",
+    "@use-it/event-listener": "^0.1.7",
     "common-tags": "^1.8.2",
     "meteor-node-stubs": "^1.2.1",
     "react": "^17.0.2",
