--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@use-it/event-listener": "^0.1.7",
     "common-tags": "^1.8.2",
     "meteor-node-stubs": "^1.2.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "raviger": "^4.1.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-draggable": "^4.4.5",
+    "react-error-boundary": "^3.1.4",
     "react-spinners": "^0.13.4"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.1",
     "@types/meteor": "^1.4.87",
     "@types/mocha": "^8.2.3",
-    "@types/react": "^17.0.48",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "typescript": "^4.6.3"
   },
   "meteor": {
