--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9",
-    "@react-hook/debounce": "^4.0.0",
-    "@react-hook/resize-observer": "^1.2.6",
-    "@use-it/event-listener": "^0.1.7",
-    "common-tags": "^1.8.2",
-    "happy-eyeballs": "0.0.15",
-    "meteor-node-stubs": "^1.2.5",
-    "raviger": "^4.1.0",
+    "@babel/runtime": "^7",
+    "@react-hook/debounce": "^4",
+    "@react-hook/resize-observer": "^1",
+    "@use-it/event-listener": "^0.1",
+    "common-tags": "^1",
+    "happy-eyeballs": "^0.0",
+    "meteor-node-stubs": "^1",
+    "raviger": "^4",
     "react": "^18",
     "react-dom": "^18",
-    "react-draggable": "^4.4.5",
-    "react-error-boundary": "^3.1.4",
-    "react-spinners": "^0.13.4"
+    "react-draggable": "^4",
+    "react-error-boundary": "^3",
+    "react-spinners": "^0.13"
   },
   "devDependencies": {
-    "@types/common-tags": "^1.8.1",
-    "@types/meteor": "^1.4.87",
-    "@types/mocha": "^8.2.3",
+    "@types/common-tags": "^1",
+    "@types/meteor": "^1",
+    "@types/mocha": "^8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^4.6.3"
+    "typescript": "^4"
   },
   "meteor": {
     "mainModule": {
