Add some package scripts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
+    "start:with-settings": "meteor run --settings settings.json",
+    "build-userland": "./imports/userland/build.fish",
+    "build-userland:watch": "echo ./imports/userland/iframe-entrypoint.ts | entr ./imports/userland/build.fish",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
