--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "openapi-types": "^12",
+    "react-google-button": "^0.7",
     "typescript": "^4"
   },
   "meteor": {
