--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@types/meteor": "^2",
     "@types/mocha": "^8",
     "@types/react": "^18",
+    "@types/react-command-palette": "^0.18",
     "@types/react-dom": "^18",
     "openapi-types": "^12",
+    "react-command-palette": "^0.22",
     "react-google-button": "^0.7",
     "stack-source-map": "^1",
     "typescript": "^4"
