--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.36.4",
+    "@opentelemetry/sdk-node": "^0.36.0",
     "@react-hook/debounce": "^4",
     "@react-hook/resize-observer": "^1",
     "@use-it/event-listener": "^0.1",
@@ -32,6 +35,7 @@
     "@swc/cli": "^0.1",
     "@swc/core": "^1",
     "@types/common-tags": "^1",
+    "@types/fibers": "^3.1.1",
     "@types/meteor": "^2",
     "@types/mocha": "^8",
     "@types/react": "^18",
