--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.36.4",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.36.0",
     "@opentelemetry/sdk-node": "^0.36.0",
     "@react-hook/debounce": "^4",
     "@react-hook/resize-observer": "^1",
@@ -32,6 +33,7 @@
     "yaml": "^2"
   },
   "devDependencies": {
+    "@opentelemetry/sdk-trace-web": "^1.10.0",
     "@swc/cli": "^0.1",
     "@swc/core": "^1",
     "@types/common-tags": "^1",
