Update how typings are installed
Use the types that Meteor provides, instead of installing a different
@types/ package to get them.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     /* Module Resolution Options */
     "baseUrl": ".",
     "paths": {
+      "meteor/*": [".meteor/local/types/packages.d.ts"],
       /* Support absolute /imports/* with a leading '/' */
       "/*": ["*"]
     },
