Ponyfill several APIs to enable serverside use

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "common-tags": "^1",
     "happy-eyeballs": "^0.0",
     "meteor-node-stubs": "^1",
+    "node-abort-controller": "^3",
     "urlpattern-polyfill": "^8",
+    "web-streams-polyfill": "^3",
     "yaml": "^2"
   },
   "devDependencies": {
